package enums;

public enum InvoiceStatus {
    PENDING, PAID, OVERDUE, CANCELLED
}
