package org.example.enums;

public enum AccountType {
        OWNER,CUSTOMER
}
