package org.example.enums;

public enum ChargingMode {
    FAST, STANDARD, ECO
}
