package org.example.enums;

public enum StationType {
    AC, DC
}
