classDiagram

    class Main {
        +main(args: String[])
    }

    class Account {
        +userId: long
        +username: String
        +email: String
        +password: String
        +role: AccountType
        +active: boolean
    }

    class ChargingLocation {
        +locationId: Long
        +name: String
        +address: String
        +stations: List~ChargingStation~
    }

    class ChargingStation {
        +stationId: long
        +locationId: long
        +stationName: String
        +type: StationType
        +capacity: int
        +status: StationStatus
        +pricing: float
    }

    class ChargingProcess {
        +sessionId: Long
        +customerId: Long
        +stationId: Long
        +stationName: String
        +mode: ChargingMode
        +batteryPercentage: int
        +targetBatteryPercentage: int
        +powerKW: int
        +timeToFullMinutes: int
        +expectedRangeKm: int
        +drivenDistanceKm: int
        +status: SessionStatus
    }

    class PricingRules {
        +pricingId: int
        +locationId: int
        +stationType: StationType
        +validFrom: int
        +validTo: int
        +priceComponents: List~PriceComponent~
        +active: boolean
    }

    class Invoice {
        +kWh: double
        +duration: int
        +mode: String
        +station: String
        +pricePerKWh: double
        +totalCost: double
        +appliedPricingRule: String
        +status: String
        +customerBalance: double
    }

    class AccountManager {
        -accounts: List~Account~
    }

    class ChargingLocationManager {
        -locations: List~ChargingLocation~
        -idCounter: long
    }

    class StationManager {
        -locations: Map~Long,ChargingLocation~
        -stations: Map~Long,ChargingStation~
        -stationIdCounter: long
    }

    class ChargingProcessManager {
        -processes: Map~Long,ChargingProcess~
        -sessionIdCounter: long
    }

    class PricingManager {
        -pricingRules: List~PricingRules~
    }

    class InvoiceManager {
        -invoices: List~Invoice~
        -reviewQueue: List~Invoice~
        -currentPricePerKWh: double
        -priceAtStart: double
        -logs: List~String~
    }

    class AccountType {
        <<enum>>
    }

    class StationType {
        <<enum>>
    }

    class StationStatus {
        <<enum>>
    }

    class ChargingMode {
        <<enum>>
    }

    class SessionStatus {
        <<enum>>
    }

    class PriceComponent {
        <<enum>>
    }

    class InvoiceStatus {
        <<enum>>
    }

    class DepositStatus {
        <<enum>>
    }

    class PaymentMethod {
        <<enum>>
    }

%% Beziehungen

    Main ..> AccountManager
    Main ..> ChargingLocationManager
    Main ..> StationManager
    Main ..> ChargingProcessManager
    Main ..> PricingManager
    Main ..> InvoiceManager

    AccountManager ..> Account
    ChargingLocationManager ..> ChargingLocation
    StationManager ..> ChargingLocation
    StationManager ..> ChargingStation
    ChargingProcessManager ..> ChargingProcess
    PricingManager ..> PricingRules
    InvoiceManager ..> Invoice

    Account "1" --> "*" ChargingProcess : customerId
    Account "1" --> "*" Invoice : billed

    ChargingLocation "1" --> "*" ChargingStation : stations
    ChargingStation "1" --> "*" ChargingProcess : sessions

    ChargingLocation "1" --> "0..*" PricingRules : pricing
    PricingRules "1" --> "*" PriceComponent : components

    ChargingStation --> StationType
    ChargingStation --> StationStatus
    ChargingProcess --> ChargingMode
    ChargingProcess --> SessionStatus
    PricingRules --> StationType
    PricingRules --> PriceComponent
    Invoice --> InvoiceStatus
    Invoice --> PaymentMethod
    Invoice --> DepositStatus
    Account --> AccountType
